Add: export UI component and use it in app Component

--- a/src/app/ui/containers/ui/ui.component.html
+++ b/src/app/ui/containers/ui/ui.component.html
@@ -1,1 +1,18 @@
 <p>ui works!</p>
+<coderbase-ui>
+  <div header>
+    <app-header></app-header>
+  </div>
+
+  <div nav>
+    <app-nav></app-nav>
+  </div>
+
+  <div content>
+
+  </div>
+
+  <div footer>
+    <app-footer></app-footer>
+  </div>
+</coderbase-ui>
