--- a/src/app/prestations/pages/page-prestations/page-prestations.component.html
+++ b/src/app/prestations/pages/page-prestations/page-prestations.component.html
@@ -1,1 +1,26 @@
-<p>page-prestations works!</p>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Type</th>
+        <th scope="col">Client</th>
+        <th scope="col">Nb Jours</th>
+        <th scope="col">Tjm HT</th>
+        <th scope="col">Total HT</th>
+        <th scope="col">Total TTC</th>
+        <th scope="col">State</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of collection">
+        <td>{{ item.typePresta }}</td>
+        <td>{{ item.client }}</td>
+        <td>{{ item.nbJours }}</td>
+        <td>{{ item.tjmHt }}</td>
+        <td>{{ item.totalHt() }}</td>
+        <td>{{ item.totalTtc() }}</td>
+        <td>{{ item.state }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
