--- a/src/app/prestations/pages/page-prestations/page-prestations.component.html
+++ b/src/app/prestations/pages/page-prestations/page-prestations.component.html
@@ -1,20 +1,11 @@
-<div class="table-responsive">
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col" *ngFor="let header of headers">{{ header }}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of collection">
-        <td>{{ item.typePresta }}</td>
-        <td>{{ item.client }}</td>
-        <td>{{ item.nbJours }}</td>
-        <td>{{ item.tjmHt | currency: 'EUR' }}</td>
-        <td>{{ item | total | currency: 'EUR' }}</td>
-        <td>{{ item | total: item.tauxTva | currency: 'EUR' }}</td>
-        <td>{{ item.state }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-tableau-light [headers]="headers">
+  <tr *ngFor="let item of collection">
+    <td>{{ item.typePresta }}</td>
+    <td>{{ item.client }}</td>
+    <td>{{ item.nbJours }}</td>
+    <td>{{ item.tjmHt | currency: 'EUR' }}</td>
+    <td>{{ item | total | currency: 'EUR' }}</td>
+    <td>{{ item | total: item.tauxTva | currency: 'EUR' }}</td>
+    <td>{{ item.state }}</td>
+  </tr>
+</app-tableau-light>
