--- a/src/app/prestations/pages/page-prestations/page-prestations.component.html
+++ b/src/app/prestations/pages/page-prestations/page-prestations.component.html
@@ -6,6 +6,10 @@
     <td>{{ item.tjmHt | currency: 'EUR' }}</td>
     <td>{{ item | total | currency: 'EUR' }}</td>
     <td>{{ item | total: item.tauxTva | currency: 'EUR' }}</td>
-    <td>{{ item.state }}</td>
+    <td>
+      <select>
+        <option *ngFor="let state of states | keyvalue" [value]="state.value" [selected]="item.state === state.value">{{ state.value }}</option>
+      </select>
+    </td>
   </tr>
 </app-tableau-light>
