--- a/src/app/prestations/pages/page-prestations/page-prestations.component.html
+++ b/src/app/prestations/pages/page-prestations/page-prestations.component.html
@@ -6,7 +6,7 @@
     <td>{{ item.tjmHt | currency: 'EUR' }}</td>
     <td>{{ item | total | currency: 'EUR' }}</td>
     <td>{{ item | total: item.tauxTva | currency: 'EUR' }}</td>
-    <td>
+    <td [appState]="item.state">
       <select (change)="updateState(item, $event)">
         <option *ngFor="let state of states | keyvalue" [value]="state.value" [selected]="item.state === state.value">{{ state.value }}</option>
       </select>
