--- a/src/app/ui/containers/ui/ui.component.html
+++ b/src/app/ui/containers/ui/ui.component.html
@@ -1,17 +1,17 @@
 <coderbase-ui>
-  <div header>
+  <ng-container header>
     <app-header></app-header>
-  </div>
+  </ng-container>
 
-  <div nav>
+  <ng-container nav>
     <app-nav></app-nav>
-  </div>
+  </ng-container>
 
-  <div content>
+  <ng-container content>
     <router-outlet></router-outlet>
-  </div>
+  </ng-container>
 
-  <div footer>
+  <ng-container footer>
     <app-footer></app-footer>
-  </div>
+  </ng-container>
 </coderbase-ui>
