--- a/src/app/prestations/pages/page-prestations/page-prestations.component.html
+++ b/src/app/prestations/pages/page-prestations/page-prestations.component.html
@@ -1,4 +1,4 @@
-<app-tableau-light [headers]="headers">
+<app-tableau-dark [headers]="headers">
   <tr *ngFor="let item of collection">
     <td>{{ item.typePresta }}</td>
     <td>{{ item.client }}</td>
@@ -12,4 +12,4 @@
       </select>
     </td>
   </tr>
-</app-tableau-light>
+</app-tableau-dark>
