--- a/src/app/shared/components/tableau-light/tableau-light.component.html
+++ b/src/app/shared/components/tableau-light/tableau-light.component.html
@@ -1,5 +1,5 @@
 <div class="table-responsive" id="table-light">
-  <table class="table">
+  <table class="table table-bordered">
     <thead>
       <tr>
         <th scope="col" *ngFor="let header of headers">{{ header }}</th>
