--- a/src/app/shared/components/tableau-dark/tableau-dark.component.scss
+++ b/src/app/shared/components/tableau-dark/tableau-dark.component.scss
@@ -1,7 +1,7 @@
 @import 'theme';
 
 #table-dark {
-  .state-annule {
+  .state-annule, .state-inactif {
     background: $color-error;
   }
 
@@ -9,7 +9,7 @@
     background: $color3;
   }
 
-  .state-confirme {
+  .state-confirme, .state-actif {
     background: $color-success;
   }
 }
