--- a/src/app/clients/pages/page-clients/page-clients.component.html
+++ b/src/app/clients/pages/page-clients/page-clients.component.html
@@ -1,11 +1,13 @@
-<app-tableau-light [headers]="headers">
-  <tr *ngFor="let item of collection">
-    <td>{{ item.name }}</td>
-    <td>{{ item.email }}</td>
-    <td [appState]="item.state">
-      <select (change)="updateState(item, $event)">
-        <option *ngFor="let state of states | keyvalue" [value]="state.value" [selected]="item.state === state.value">{{ state.value }}</option>
-      </select>
-    </td>
-  </tr>
-</app-tableau-light>
+<app-template-b>
+  <app-tableau-light [headers]="headers">
+    <tr *ngFor="let item of collection">
+      <td>{{ item.name }}</td>
+      <td>{{ item.email }}</td>
+      <td [appState]="item.state">
+        <select (change)="updateState(item, $event)">
+          <option *ngFor="let state of states | keyvalue" [value]="state.value" [selected]="item.state === state.value">{{ state.value }}</option>
+        </select>
+      </td>
+    </tr>
+  </app-tableau-light>
+</app-template-b>
