--- a/src/app/prestations/pages/page-prestations/page-prestations.component.html
+++ b/src/app/prestations/pages/page-prestations/page-prestations.component.html
@@ -1,15 +1,17 @@
-<app-tableau-dark [headers]="headers">
-  <tr *ngFor="let item of collection">
-    <td>{{ item.typePresta }}</td>
-    <td>{{ item.client }}</td>
-    <td>{{ item.nbJours }}</td>
-    <td>{{ item.tjmHt | currency: 'EUR' }}</td>
-    <td>{{ item | total | currency: 'EUR' }}</td>
-    <td>{{ item | total: item.tauxTva | currency: 'EUR' }}</td>
-    <td [appState]="item.state">
-      <select (change)="updateState(item, $event)">
-        <option *ngFor="let state of states | keyvalue" [value]="state.value" [selected]="item.state === state.value">{{ state.value }}</option>
-      </select>
-    </td>
-  </tr>
-</app-tableau-dark>
+<app-template-a>
+  <app-tableau-dark [headers]="headers">
+    <tr *ngFor="let item of collection">
+      <td>{{ item.typePresta }}</td>
+      <td>{{ item.client }}</td>
+      <td>{{ item.nbJours }}</td>
+      <td>{{ item.tjmHt | currency: 'EUR' }}</td>
+      <td>{{ item | total | currency: 'EUR' }}</td>
+      <td>{{ item | total: item.tauxTva | currency: 'EUR' }}</td>
+      <td [appState]="item.state">
+        <select (change)="updateState(item, $event)">
+          <option *ngFor="let state of states | keyvalue" [value]="state.value" [selected]="item.state === state.value">{{ state.value }}</option>
+        </select>
+      </td>
+    </tr>
+  </app-tableau-dark>
+</app-template-a>
