--- a/src/app/clients/pages/page-clients/page-clients.component.html
+++ b/src/app/clients/pages/page-clients/page-clients.component.html
@@ -1,4 +1,4 @@
-<app-template-b>
+<app-template-b [title]="title" [subtitle]="subtitle">
   <app-tableau-light [headers]="headers">
     <tr *ngFor="let item of collection">
       <td>{{ item.name }}</td>
