--- a/src/app/prestations/pages/page-prestations/page-prestations.component.html
+++ b/src/app/prestations/pages/page-prestations/page-prestations.component.html
@@ -1,4 +1,4 @@
-<app-template-a>
+<app-template-a [title]="title" [subtitle]="subtitle">
   <app-tableau-dark [headers]="headers">
     <tr *ngFor="let item of collection">
       <td>{{ item.typePresta }}</td>
