Add: style on specific template

--- a/src/app/shared/components/tableau-light/tableau-light.component.scss
+++ b/src/app/shared/components/tableau-light/tableau-light.component.scss
@@ -13,3 +13,8 @@
     background: $color-success;
   }
 }
+
+app-template-b #table-light thead {
+  background: $dark-color;
+  color: $light-color;
+}
