Add: button and use it

--- a/src/app/clients/pages/page-clients/page-clients.component.html
+++ b/src/app/clients/pages/page-clients/page-clients.component.html
@@ -10,4 +10,6 @@
       </td>
     </tr>
   </app-tableau-light>
+  <app-button [text]="addBtnText" [route]="addBtnRoute"></app-button>
+  <!--<app-button [text]="addBtnText" [route]="addBtnRoute" [fragment]="addBtnFragment"></app-button>-->
 </app-template-b>
