--- a/src/app/prestations/pages/page-prestations/page-prestations.component.html
+++ b/src/app/prestations/pages/page-prestations/page-prestations.component.html
@@ -14,4 +14,6 @@
       </td>
     </tr>
   </app-tableau-dark>
+  <app-button [text]="addBtnText" [route]="addBtnRoute"></app-button>
+  <!--<app-button [text]="addBtnText" [route]="addBtnRoute" [fragment]="addBtnFragment"></app-button>-->
 </app-template-a>
