--- a/src/app/prestations/pages/page-add-prestation/page-add-prestation.component.html
+++ b/src/app/prestations/pages/page-add-prestation/page-add-prestation.component.html
@@ -1,1 +1,6 @@
-<p>page-add-prestation works!</p>
+<app-template-a [title]="title" [subtitle]="subtitle">
+
+  <div class="container pt-3 pb-3">
+    <app-form-presta></app-form-presta>
+  </div>
+</app-template-a>
