--- a/src/app/prestations/components/form-presta/form-presta.component.html
+++ b/src/app/prestations/components/form-presta/form-presta.component.html
@@ -27,7 +27,7 @@
   <div class="form-group">
     <label for="state">State</label>
     <select id="state" class="form-control" formControlName="state">
-        <option *ngFor="let state of states | keyvalue" [value]="state.value">{{ state.value }}</option>
+      <option *ngFor="let state of states | keyvalue" [ngValue]="state.value">{{ state.value }}</option>
     </select>
   </div>
 
