--- a/src/app/prestations/components/form-presta/form-presta.component.html
+++ b/src/app/prestations/components/form-presta/form-presta.component.html
@@ -2,11 +2,13 @@
   <div class="form-group">
     <label for="typePresta">Type Prestation</label>
     <input type="text" class="form-control" id="typePresta" formControlName="typePresta">
+    <div class="alert alert-danger" *ngIf="form.get('typePresta').invalid && form.get('typePresta').touched">invalid</div>
   </div>
 
   <div class="form-group">
     <label for="client">Client</label>
     <input type="text" class="form-control" id="client" formControlName="client">
+    <div class="alert alert-danger" *ngIf="form.get('client').invalid && form.get('client').touched">invalid</div>
   </div>
 
   <div class="form-group">
@@ -36,5 +38,5 @@
     <textarea class="form-control" id="comment" formControlName="comment"></textarea>
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Submit</button>
 </form>
